--- a/šachy-upg/MainWindow.xaml
+++ b/šachy-upg/MainWindow.xaml
@@ -1,12 +1,9 @@
 ﻿<Window x:Class="šachy_upg.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:šachy_upg"
-        mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
-    <Grid>
-
-    </Grid>
+        Title="Šachovnice WPF" Height="600" Width="600">
+    <DockPanel>
+        <Button DockPanel.Dock="Bottom" Height="30" Content="Změnit barvy" Click="ChangeColors_Click"/>
+        <Grid Name="ChessGrid" Margin="10"/>
+    </DockPanel>
 </Window>
