--- a/šachy-upg/MainWindow.xaml
+++ b/šachy-upg/MainWindow.xaml
@@ -1,9 +1,21 @@
 ﻿<Window x:Class="šachy_upg.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Šachovnice WPF" Height="600" Width="600">
-    <DockPanel>
-        <Button DockPanel.Dock="Bottom" Height="30" Content="Změnit barvy" Click="ChangeColors_Click"/>
-        <Grid Name="ChessGrid" Margin="10"/>
-    </DockPanel>
+        Title="šachy" Height="600" Width="600"
+    WindowStartupLocation ="CenterScreen"
+        Background="Black">
+    <Viewbox>
+        <Grid x:Name="BoardGrid"
+              Width= "600"
+              Height="600">
+            <Grid.Background>
+                <ImageBrush ImageSource="figurky/Board.png"/>
+            </Grid.Background>
+
+            <UniformGrid x:Name="PieceGrid"
+                         Rows="8"
+                         Columns="8">
+            </UniformGrid>
+        </Grid>
+    </Viewbox>
 </Window>
