--- a/šachy-upg/MainWindow.xaml
+++ b/šachy-upg/MainWindow.xaml
@@ -2,15 +2,21 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="šachy" Height="600" Width="600"
-    WindowStartupLocation ="CenterScreen"
+    WindowStartupLocation="CenterScreen"
         Background="Black">
     <Viewbox>
         <Grid x:Name="BoardGrid"
               Width= "600"
-              Height="600">
+              Height="600"
+              MouseDown="BoardGrid_MouseDown">
             <Grid.Background>
                 <ImageBrush ImageSource="figurky/Board.png"/>
             </Grid.Background>
+
+            <UniformGrid x:Name="HighlightGrid"
+                         Rows="8"
+                         Columns="8">
+            </UniformGrid>
 
             <UniformGrid x:Name="PieceGrid"
                          Rows="8"
