--- a/šachy-upg/MainWindow.xaml
+++ b/šachy-upg/MainWindow.xaml
@@ -3,7 +3,8 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="šachy" Height="600" Width="600"
     WindowStartupLocation="CenterScreen"
-        Background="Black">
+        Background="Black"
+        KeyDown="Window_KeyDown">
     <Viewbox>
         <Grid x:Name="BoardGrid"
               Width= "600"
